--- a/python_implementation.ipynb
+++ b/python_implementation.ipynb
@@ -1006,242 +1006,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "de0e7204",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, '42 South Street'),\n",
-       " (1, '49 Beekman Street'),\n",
-       " (4, '100 Duane Street'),\n",
-       " (1, '14 N. Moore Street'),\n",
-       " (2, '75 Canal Street'),\n",
-       " (3, '25 Pitt Street'),\n",
-       " (2, '222 East 2 Street'),\n",
-       " (1, '340 East 14 Street'),\n",
-       " (2, '253 Lafayette Street'),\n",
-       " (2, '42 Great Jones Street'),\n",
-       " (2, '108 East 13 Street'),\n",
-       " (1, '132 West 10 Street'),\n",
-       " (2, '440 West 38th Street'),\n",
-       " (1, '220 West 37 Street'),\n",
-       " (3, '150 West 19 Street'),\n",
-       " (2, '142 West 31 Street'),\n",
-       " (1, '14 East 18 Street'),\n",
-       " (2, '234 East 29 Street'),\n",
-       " (1, '238 East 40 Street'),\n",
-       " (3, '782 Eighth Avenue'),\n",
-       " (1, '215 W 58th Street'),\n",
-       " (2, '131 Amsterdam Avenue'),\n",
-       " (2, '207 West 77th Street'),\n",
-       " (1, '120 West 83 Street'),\n",
-       " (3, '165 East 51 Street'),\n",
-       " (1, '221 East 75 Street'),\n",
-       " (3, '159 East 85 Street'),\n",
-       " (2, '1367 Fifth Avenue'),\n",
-       " (2, '1836 Third Avenue'),\n",
-       " (1, '242 East 111 Street'),\n",
-       " (3, '2282 Third Avenue'),\n",
-       " (3, '145 West 100th St.'),\n",
-       " (1, '500 West 113 Street'),\n",
-       " (2, '111 West 133 Street'),\n",
-       " (2, '415 West 125 Street'),\n",
-       " (2, '513 West 161 Street'),\n",
-       " (2, '29 Vermilyea Avenue'),\n",
-       " (1, '363 Broome Street'),\n",
-       " (1, '530 West 43 Street'),\n",
-       " (2, '157 E 67th St'),\n",
-       " (3, '248 West 143 Street'),\n",
-       " (2, '503 West 139 Street'),\n",
-       " (3, '515 West 181 Street'),\n",
-       " (2, '124 Liberty Street'),\n",
-       " (1, '33 West 43 Street'),\n",
-       " (3, '227 Sixth Avenue'),\n",
-       " (1, '518 West 170 Street'),\n",
-       " (1, '20 Rear Bloomfield Street'),\n",
-       " (3, '341 East 143 Street'),\n",
-       " (1, '330 East 150th Street'),\n",
-       " (3, '720 Melrose Ave.'),\n",
-       " (3, '1155 Washington Ave.'),\n",
-       " (2, '1160 Ogden Ave.'),\n",
-       " (2, '618 East 138 Street'),\n",
-       " (3, '1226 Seneca Ave.'),\n",
-       " (1, '1781 Monroe Ave.'),\n",
-       " (2, '1901 Sedgwick Ave.'),\n",
-       " (2, '460 Cross Bronx Expressway'),\n",
-       " (1, '453 E 176 Street'),\n",
-       " (2, '1215 Intervale Ave.'),\n",
-       " (3, '2417 Webster Ave.'),\n",
-       " (3, '925 East Tremont Ave.'),\n",
-       " (3, '2928 Briggs Ave.'),\n",
-       " (2, '1689 Story Ave.'),\n",
-       " (2, '1843 White Plains Rd.'),\n",
-       " (2, '1518 Williamsbridge Road'),\n",
-       " (1, '1454 Astor Ave.'),\n",
-       " (2, '3431 White Plains Road'),\n",
-       " (2, '3446 Eastchester Road'),\n",
-       " (3, '755 East 233 Street'),\n",
-       " (2, '21 Asch Loop'),\n",
-       " (2, '2924 Bruckner Blvd.'),\n",
-       " (1, '3929 East Tremont Ave.'),\n",
-       " (2, '169 Schofield Street'),\n",
-       " (2, '4550 Henry Hudson Parkway E.'),\n",
-       " (2, '2225 Belmont Ave.'),\n",
-       " (2, '3025 Bailey Ave.'),\n",
-       " (2, '655 Prospect Ave.'),\n",
-       " (2, '1214 Castle Hill Ave.'),\n",
-       " (3, '1259 Morris Ave.'),\n",
-       " (1, '1655 Washington Ave'),\n",
-       " (3, '2175 Walton Ave.'),\n",
-       " (5, '172 Tillary Street'),\n",
-       " (1, '409 State Street'),\n",
-       " (2, '74 Middagh Street'),\n",
-       " (1, '274 Hicks Street'),\n",
-       " (2, '252 Lorraine St.'),\n",
-       " (3, '31 Richards Street'),\n",
-       " (1, '436 39th St'),\n",
-       " (1, '788 Union Street'),\n",
-       " (1, '395 4th Ave.'),\n",
-       " (2, '530 11th Street'),\n",
-       " (2, '494 Dean Street'),\n",
-       " (2, \"489 Saint John's Place\"),\n",
-       " (3, \"1352 Saint John's Place\"),\n",
-       " (1, '423 Ralph Ave.'),\n",
-       " (2, '25 Rockaway Ave.'),\n",
-       " (1, '940 Dekalb Avenue'),\n",
-       " (2, '32 Ralph Ave.'),\n",
-       " (2, '495 Hancock Street'),\n",
-       " (1, '701 Park Avenue'),\n",
-       " (2, '206 Monroe Street'),\n",
-       " (1, '850 Bedford Ave.'),\n",
-       " (1, '160 Carlton Ave.'),\n",
-       " (2, '26 Hooper Street'),\n",
-       " (2, '161 South 2nd Street'),\n",
-       " (3, '187 Union Ave.'),\n",
-       " (2, '205 Greenpoint Ave.'),\n",
-       " (2, '75 Richardson Street'),\n",
-       " (1, '1201 Grand Street'),\n",
-       " (1, '43 Morgan Ave.'),\n",
-       " (1, '650 Hart Street'),\n",
-       " (3, '392 Himrod Street'),\n",
-       " (2, '582 Knickerbocker Ave.'),\n",
-       " (1, '617 Central Ave.'),\n",
-       " (3, '107 Watkins Street'),\n",
-       " (2, '885 Howard Ave.'),\n",
-       " (2, '165 Bradford st.'),\n",
-       " (2, '480 Sheffield Ave.'),\n",
-       " (1, '998 Liberty Ave.'),\n",
-       " (3, '799 Lincoln Ave.'),\n",
-       " (2, '5105 Snyder Ave.'),\n",
-       " (2, '491 Rogers Ave.'),\n",
-       " (2, '2900 Snyder Ave.'),\n",
-       " (2, '1210 Cortelyou Road'),\n",
-       " (2, '1367 Rogers Ave.'),\n",
-       " (2, '1307 Prospect Ave.'),\n",
-       " (2, '4210 12th Ave.'),\n",
-       " (1, '1336 60th Street'),\n",
-       " (2, '6630 3rd Avenue'),\n",
-       " (1, '9219 5th Ave.'),\n",
-       " (2, '1157 79th St.'),\n",
-       " (3, '8653 18th Ave.'),\n",
-       " (1, '126 Foster Ave.'),\n",
-       " (2, '2312 65th Street'),\n",
-       " (3, '1635 E. 14th Street'),\n",
-       " (1, '2429 86th Street'),\n",
-       " (2, '2510 Neptune Ave.'),\n",
-       " (2, '901 Avenue U'),\n",
-       " (3, '2929 W. 8th Street'),\n",
-       " (3, '1361 Rockaway Parkway'),\n",
-       " (1, '6405 Avenue N'),\n",
-       " (2, '1851 E. 48 Street'),\n",
-       " (2, '2732 E. 11th Street'),\n",
-       " (1, '2165 Gerritsen Ave.'),\n",
-       " (2, 'Brooklyn Navy Yard Building 292'),\n",
-       " (3, '5113 4th Avenue'),\n",
-       " (1, '1815 Sterling Place'),\n",
-       " (2, '10-40 47th Ave.'),\n",
-       " (2, '41-24 51st Street'),\n",
-       " (3, '33-51 Greenpoint Avenue'),\n",
-       " (1, '11-15 37th Avenue'),\n",
-       " (1, '37-20 29th Street'),\n",
-       " (1, '30-89 21st Street'),\n",
-       " (2, '42-06, 42-08 Astoria Blvd. South'),\n",
-       " (2, '22-63 35th St.'),\n",
-       " (2, '81-17 Northern Blvd.'),\n",
-       " (2, '97-28 43rd Avenue'),\n",
-       " (1, '27-12 Kearney Street'),\n",
-       " (2, '108-01 Horace Harding Exp.'),\n",
-       " (2, '64-18 Queens Blvd.'),\n",
-       " (1, '56-29 68th Street'),\n",
-       " (3, '86-53 Grand Avenue'),\n",
-       " (2, '111-02 Queens Blvd.'),\n",
-       " (2, '66-44 Myrtle Avenue'),\n",
-       " (1, '78-11 67th Road'),\n",
-       " (2, '119-11 14th Road'),\n",
-       " (2, '12-49 149th Street'),\n",
-       " (2, '40-18 Union Street'),\n",
-       " (2, '41-20 Murray Street'),\n",
-       " (2, '36-18 Francis Lewis Blvd.'),\n",
-       " (1, '40-18 214th Place'),\n",
-       " (2, '159-06 Union Turnpike'),\n",
-       " (2, '61-20 Utopia Parkway'),\n",
-       " (3, '64-04 Springfield Blvd.'),\n",
-       " (2, '44-01 244th Street'),\n",
-       " (1, '254-20 Union Turnpike'),\n",
-       " (1, '89-40 87th Street'),\n",
-       " (2, '103-17 98th Street'),\n",
-       " (2, '101-02 Jamaica Avenue'),\n",
-       " (2, '91-45 121st Street'),\n",
-       " (2, '107-12 Lefferts Blvd.'),\n",
-       " (3, '153-11 Hillside Avenue'),\n",
-       " (2, '104-12 Princeton Street'),\n",
-       " (2, '111-36 Merrick Blvd.'),\n",
-       " (2, '91-04 197th Street'),\n",
-       " (2, '218-44 97th Avenue'),\n",
-       " (2, '143-15 Rockaway Blvd.'),\n",
-       " (3, '117-11 196th Street'),\n",
-       " (2, '145-50 Springfield Blvd.'),\n",
-       " (1, '142-04 Brookville Blvd.'),\n",
-       " (2, '158-57 Cross Bay Blvd.'),\n",
-       " (2, '257 Beach 116th Street'),\n",
-       " (1, '402 B. 169 Street'),\n",
-       " (1, '92-20 Rockaway Beach Blvd.'),\n",
-       " (2, '56-07 Metropolitan Avenue'),\n",
-       " (3, '16-15, 16-17, 16-19 Central Ave.'),\n",
-       " (1, '420A Weaver Ave'),\n",
-       " (3, '48-06 Rockaway Beach Blvd'),\n",
-       " (2, '14 Brighton Avenue'),\n",
-       " (2, '1189 Castleton Avenue'),\n",
-       " (1, '412 Broadway'),\n",
-       " (2, '875 Jewett Avenue'),\n",
-       " (2, '74 Broad Street'),\n",
-       " (2, '3067 Richmond Road'),\n",
-       " (2, '1573 Castleton Avenue'),\n",
-       " (1, '65 Harbor Road'),\n",
-       " (2, '1400 Richmond Avenue'),\n",
-       " (2, '3730 Victory Boulevard'),\n",
-       " (2, '256 Hylan Blvd.'),\n",
-       " (2, '278 McClean Avenue'),\n",
-       " (3, '1850 Clove Road'),\n",
-       " (1, '1592 Richmond Road'),\n",
-       " (3, '256 Nelson Ave.'),\n",
-       " (2, '345 Annadale Road'),\n",
-       " (2, '1560 Drumgoole Road West'),\n",
-       " (2, '7219 Amboy Road'),\n",
-       " (1, '1100 Rossville Ave'),\n",
-       " (1, '305 Front Street')]"
+       "[(2, '42 South Street'), (1, '49 Beekman Street'), (4, '100 Duane Street')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "capacities = [(feature['properties']['capacity'], feature['properties']['FacilityAddress']) for feature in stations['features']]\n",
-    "capacities"
+    "capacities[0:3]"
    ]
   },
   {
@@ -1274,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fab65912",
+   "id": "443f9a80",
    "metadata": {},
    "source": [
     "### 2. Vehicles availability\n",
@@ -1288,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "3b212624",
+   "id": "4ff65ae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a879e6b2",
+   "id": "6bef8548",
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a717027b",
+   "id": "e5e49ab1",
    "metadata": {},
    "source": [
     "### 3. At least one vehicle\n",
@@ -1339,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "98985e0a",
+   "id": "e7e2c65e",
    "metadata": {},
    "outputs": [
     {
