new serviceability file uploaded

--- a/neighborhoods_serviceability_v2.ipynb
+++ b/neighborhoods_serviceability_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "[219 rows x 219 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,35 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1095.44"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Flatten the DataFrame into a 1D array using ravel\n",
-    "distance_stations_ntas_flat = df_distance_stations_ntas.values.ravel()\n",
-    "# Identify positions of NaN values\n",
-    "nan_positions = np.isnan(distance_stations_ntas_flat)\n",
-    "# Use boolean indexing to get an array without NaN values\n",
-    "flat_values_nan_without_nan = distance_stations_ntas_flat[~nan_positions]\n",
-    "# Calculate the 25th percentile using numpy\n",
-    "distance_threshold = np.percentile(flat_values_nan_without_nan, 25)\n",
-    "distance_threshold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +915,7 @@
        "[195 rows x 219 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +937,7 @@
     "    # iterate stations' distances from the neighborhood\n",
     "    for station, distance_st_nta in distances.items():\n",
     "        # check if the distance between the nta and the station is less then the 20 percentile\n",
-    "        if distance_st_nta < distance_threshold:\n",
+    "        if distance_st_nta <= 754:\n",
     "            # set the neighborhood as servable by that station\n",
     "            df_neighborhoods_serviceability.loc[nta, station] = True\n",
     "    \n",
@@ -975,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1242,19 +1214,19 @@
        "    <tr>\n",
        "      <th>BK40</th>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -1303,7 +1275,7 @@
        "BK93            False              False             False   \n",
        "BK73             True               True              True   \n",
        "MN28             True               True              True   \n",
-       "BK40             True               True              True   \n",
+       "BK40             True              False              True   \n",
        "BK99            False              False             False   \n",
        "\n",
        "      14 N. Moore Street  75 Canal Street  25 Pitt Street  222 East 2 Street  \\\n",
@@ -1316,7 +1288,7 @@
        "BK93               False            False           False              False   \n",
        "BK73                True             True            True               True   \n",
        "MN28                True             True            True               True   \n",
-       "BK40                True             True            True               True   \n",
+       "BK40               False            False           False              False   \n",
        "BK99               False            False           False              False   \n",
        "\n",
        "      340 East 14 Street  253 Lafayette Street  42 Great Jones Street  ...  \\\n",
@@ -1329,7 +1301,7 @@
        "BK93               False                 False                  False  ...   \n",
        "BK73                True                  True                   True  ...   \n",
        "MN28                True                  True                   True  ...   \n",
-       "BK40               False                  True                   True  ...   \n",
+       "BK40               False                 False                  False  ...   \n",
        "BK99               False                 False                  False  ...   \n",
        "\n",
        "      256 Hylan Blvd.  278 McClean Avenue  1850 Clove Road  \\\n",
@@ -1342,7 +1314,7 @@
        "BK93            False               False            False   \n",
        "BK73            False               False            False   \n",
        "MN28            False               False            False   \n",
-       "BK40             True                True             True   \n",
+       "BK40            False               False            False   \n",
        "BK99            False               False            False   \n",
        "\n",
        "      1592 Richmond Road  256 Nelson Ave.  345 Annadale Road  \\\n",
@@ -1387,7 +1359,7 @@
        "[195 rows x 219 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
