serviceability calculation updated

--- a/neighborhoods_serviceability_v3.ipynb
+++ b/neighborhoods_serviceability_v3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "dict"
       ]
      },
-     "execution_count": 524,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "[195 rows x 219 columns]"
       ]
      },
-     "execution_count": 525,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
     "        return any(riga1 & riga2)\n",
     "\n",
     "    # transpose dataframe for checking the stations as rows\n",
-    "    #df = df.T\n",
+    "    df = df.T\n",
     "\n",
     "    # create a results list\n",
     "    results = [False] * len(df)\n",
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
      "text": [
       "engine: 754\n",
       "ladder: 754\n",
-      "rescue: 754\n",
+      "rescue: 902\n",
       "squad: 754\n"
      ]
     }
@@ -590,7 +590,7 @@
     "for vehicle_type, vehicle_quantity in zip(vehicle_types[:-1], vehicle_quantities[:-1]):\n",
     "    \n",
     "    # set an upper limit for the serviceability distance threshold\n",
-    "    serviceability_threshold = 800\n",
+    "    serviceability_threshold = 910\n",
     "    # set an initial value for the serviceability areas counter\n",
     "    serviceability_areas = 0\n",
     "    # make a copy of the original serviceability dataframe (just for the first while check)\n",
@@ -610,7 +610,7 @@
     "        duplicates = get_coverage_overlaps(vehicle_serviceability)\n",
     "\n",
     "        # count the non-overlapping areas\n",
-    "        count_false_values = (~duplicates).sum()\n",
+    "        serviceability_areas = (~duplicates).sum()\n",
     "\n",
     "    # get a copy of the original dataframe\n",
     "    vehicle_serviceability = dfs_nta_serviceability[vehicle_type].copy()\n",
@@ -624,6 +624,16 @@
     "    # print the serviceability distance\n",
     "    print(vehicle_type + \": \" + str(serviceability_threshold + 1))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for df in dfs_nta_serviceability:\n",
+    "    dfs_nta_serviceability[df].to_csv(\"dataset/serviceability/\" + df + \"_ntas_serviceability.csv\")"
    ]
   }
  ],
