All constraints implemented

--- a/neighborhoods_serviceability_v3.ipynb
+++ b/neighborhoods_serviceability_v3.ipynb
@@ -555,6 +555,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_coverage_overlaps_2(df):\n",
+    "    # check if there is at leas an overalp on the coverage\n",
+    "    def check_coverage_overlap_2(trues_row_1, row2):\n",
+    "        # get true columns from riga 2\n",
+    "        trues_row_2 = row2[row2].index.tolist()\n",
+    "        is_part_of_list = all(element in trues_row_1 for element in trues_row_2)\n",
+    "        # return true if there is at leas an overalp on the coverage, false otherwise\n",
+    "        return is_part_of_list\n",
+    "\n",
+    "    # transpose dataframe for checking the stations as rows\n",
+    "    df = df.T\n",
+    "\n",
+    "    # create a results list\n",
+    "    results = [False] * len(df)\n",
+    "    # convert the list to a series\n",
+    "    results_series = pd.Series(results, index=df.index)\n",
+    "\n",
+    "    # iter each row of the dataframe\n",
+    "    for index_1, row_1 in df.iterrows():\n",
+    "        # check if the row wasn't already checked\n",
+    "        if results_series[index_1] == False:\n",
+    "            trues_row_1 = row_1[row_1].index.tolist()\n",
+    "            # iter each row of the dataframe\n",
+    "            for index_2, row_2 in df.iterrows():\n",
+    "                # chech if the second row is after the first one, and check if it wasn't already checked\n",
+    "                if (index_2 != index_1) and (results_series[index_2] == False):\n",
+    "                    # checl the overlap for the couple of rows\n",
+    "                    is_overlap = check_coverage_overlap_2(trues_row_1, row_2)\n",
+    "                    # store the result\n",
+    "                    results_series[index_2] = is_overlap \n",
+    "    \n",
+    "    # return the series with the result for each row\n",
+    "    return results_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def set_serviceability(distance_threshold, df_nta_serviceability):\n",
     "    # interate nta-stations distances dataframe\n",
     "    for (nta, distances) in df_distance_stations_ntas.iterrows():\n",
@@ -571,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -580,17 +621,15 @@
      "text": [
       "engine: 754\n",
       "ladder: 754\n",
-      "rescue: 902\n",
-      "squad: 754\n"
+      "rescue: 2660\n",
+      "squad: 2530\n"
      ]
     }
    ],
    "source": [
+    "threshold_upper_limits = [755, 755, 2661, 2531]\n",
     "# iterate all vehicle types and relative quantities\n",
-    "for vehicle_type, vehicle_quantity in zip(vehicle_types[:-1], vehicle_quantities[:-1]):\n",
-    "    \n",
-    "    # set an upper limit for the serviceability distance threshold\n",
-    "    serviceability_threshold = 910\n",
+    "for vehicle_type, vehicle_quantity, serviceability_threshold in zip(vehicle_types[:-1], vehicle_quantities[:-1], threshold_upper_limits):\n",
     "    # set an initial value for the serviceability areas counter\n",
     "    serviceability_areas = 0\n",
     "    # make a copy of the original serviceability dataframe (just for the first while check)\n",
@@ -607,7 +646,7 @@
     "        vehicle_serviceability = set_serviceability(serviceability_threshold, vehicle_serviceability).copy()\n",
     "\n",
     "        # get the overlapping areas\n",
-    "        duplicates = get_coverage_overlaps(vehicle_serviceability)\n",
+    "        duplicates = get_coverage_overlaps_2(vehicle_serviceability)\n",
     "\n",
     "        # count the non-overlapping areas\n",
     "        serviceability_areas = (~duplicates).sum()\n",
@@ -628,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
