--- a/python_implementation.ipynb
+++ b/python_implementation.ipynb
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e55d5879",
+   "id": "95c66f80",
    "metadata": {},
    "outputs": [
     {
@@ -1967,8 +1967,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "c49a94ef",
+   "execution_count": 63,
+   "id": "c6c16c78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1991,7 +1991,7 @@
     "                    column_name = f\"{i}_needed_{shift_str}_shift\"\n",
     "                    e = current_n[column_name].values[0]\n",
     "                    d = distance.loc[n][j]\n",
-    "                    importance = 0.4 * p + 0.1 * e + 0.5 * d\n",
+    "                    importance = 0.4 * p + 0.1 * e - 0.5 * d\n",
     "                    coeff_n += importance\n",
     "                coeff += coeff_n\n",
     "            objective.SetCoefficient(v, coeff)"
@@ -1999,10 +1999,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f68a5c48",
+   "execution_count": 65,
+   "id": "cf94fe84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is no feasible solution for the problem\n"
+     ]
+    }
+   ],
    "source": [
     "result = solver.Solve()\n",
     "\n",
@@ -2041,6 +2049,14 @@
     "else :\n",
     "    print(\"Unknown error code\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8413731a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
