serviceability calculation method changed

--- a/neighborhoods_serviceability_v3.ipynb
+++ b/neighborhoods_serviceability_v3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,63 +93,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Function *get_coverage_overlaps*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define a function to detect the stations with a coverage overlap\n",
-    "def get_coverage_overlaps(df):\n",
-    "    # define an internal function to check if there is a coverage overlap between two stations\n",
-    "    def check_coverage_overlap(coverage_station_1, station_2):\n",
-    "        # get the coverage of the second station\n",
-    "        coverage_station_2 = station_2[station_2].index.tolist()\n",
-    "        # chech if there is a complete overlap between the stations'coverage\n",
-    "        is_coverage_included = all(nta in coverage_station_1 for nta in coverage_station_2)\n",
-    "        \n",
-    "        # return the result\n",
-    "        return is_coverage_included\n",
-    "\n",
-    "    # transpose dataframe for checking the stations as rows\n",
-    "    df = df.T\n",
-    "\n",
-    "    # create a results list\n",
-    "    results = [False] * len(df)\n",
-    "    # convert the list to a series\n",
-    "    results_series = pd.Series(results, index=df.index)\n",
-    "\n",
-    "    # iter each station of the dataframe\n",
-    "    for station_name_1, station_1 in df.iterrows():\n",
-    "        # check if the station wasn't already checked\n",
-    "        if results_series[station_name_1] == False:\n",
-    "            coverage_station_1 = station_1[station_1].index.tolist()\n",
-    "            # iter each station of the dataframe\n",
-    "            for station_name_2, station_2 in df.iterrows():\n",
-    "                # chech if the second station is different from first one, and check if it wasn't already checked\n",
-    "                if (station_name_2 != station_name_1) and (results_series[station_name_2] == False):\n",
-    "                    # check the overlap between the coverage of the two stations\n",
-    "                    is_overlap = check_coverage_overlap(coverage_station_1, station_2)\n",
-    "                    # store the result\n",
-    "                    results_series[station_name_2] = is_overlap \n",
-    "    \n",
-    "    # return the series with the results\n",
-    "    return results_series"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Function *set_serviceability*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,68 +126,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "engine: 754\n",
-      "ladder: 754\n",
-      "rescue: 2660\n",
-      "squad: 2530\n"
+      "The maximum threshold to cover 1 neighborhoods is: 753.19\n",
+      "The maximum threshold to cover 1 neighborhoods is: 753.19\n",
+      "The maximum threshold to cover 39 neighborhoods is: 2601.46\n",
+      "The maximum threshold to cover 24 neighborhoods is: 2336.86\n",
+      "The maximum threshold to cover 195 neighborhoods is: 4537.84\n"
      ]
     }
    ],
    "source": [
-    "# set some thresholds upper limits (JUST FOR HAVING A FASTER CALCULATION)\n",
-    "threshold_upper_limits = [755, 755, 2661, 2531]\n",
-    "#########################################################################\n",
+    "for vehicle_quantity, vehicle_type in zip(vehicle_quantities, vehicle_types):\n",
+    "    \n",
+    "    n_nta = len(df_distance_stations_ntas)\n",
+    "    # Set the number of neighborhoods you want to cover\n",
+    "    num_neighborhoods_to_cover = 1 if vehicle_quantity > n_nta else (n_nta // vehicle_quantity)\n",
     "\n",
-    "# iterate all vehicle types and relative quantities\n",
-    "for vehicle_type, vehicle_quantity, serviceability_threshold in zip(vehicle_types[:-1], vehicle_quantities[:-1], threshold_upper_limits):\n",
-    "    # set an initial value for the serviceability areas counter\n",
-    "    serviceability_areas = 0\n",
-    "    # make a copy of the original serviceability dataframe (just for the first while check)\n",
-    "    ntas_serviceability = dfs_nta_serviceability[vehicle_type].copy()\n",
+    "    # Initialize an empty dictionary to store minimum thresholds for each station\n",
+    "    min_thresholds = {}\n",
     "\n",
-    "    # iterate until:\n",
-    "    # - a neighborhood cannot be served by any station              OR\n",
-    "    # - a station cannot serve any neighborhood                     OR\n",
-    "    # - the serviceability areas are less then the vehicle quantity\n",
-    "    while ntas_serviceability.any(axis=1).all() and ntas_serviceability.any(axis=0).all() and serviceability_areas <= vehicle_quantity:\n",
-    "        # low the serviceability distance threshold\n",
-    "        serviceability_threshold -= 1\n",
+    "    # Iterate over each station in the DataFrame\n",
+    "    for station in df_distance_stations_ntas.columns:\n",
+    "        # Sort the neighborhoods by distance to the current station\n",
+    "        sorted_neighborhoods = df_distance_stations_ntas.sort_values(by=station)\n",
     "\n",
-    "        # get a copy of the original dataframe\n",
-    "        #ntas_serviceability = dfs_nta_serviceability[vehicle_type].copy()\n",
-    "        # set the serviceability based on the threshold\n",
-    "        ntas_serviceability = set_serviceability(serviceability_threshold, ntas_serviceability).copy()\n",
+    "        # Select the top N neighborhoods to cover, where N is num_neighborhoods_to_cover\n",
+    "        selected_neighborhoods = sorted_neighborhoods.index[:num_neighborhoods_to_cover]\n",
     "\n",
-    "        # get the overlaps series\n",
-    "        overlaps = get_coverage_overlaps(ntas_serviceability)\n",
+    "        # Calculate the minimum distance threshold for the selected neighborhoods\n",
+    "        min_threshold = sorted_neighborhoods.loc[selected_neighborhoods, station].max()\n",
     "\n",
-    "        # count the non-overlapping areas\n",
-    "        serviceability_areas = (~overlaps).sum()\n",
+    "        # Store the result in the dictionary\n",
+    "        min_thresholds[station] = min_threshold\n",
+    "\n",
+    "    # Find the maximum threshold among all stations\n",
+    "    max_threshold = max(min_thresholds.values())\n",
+    "    print(f\"The maximum threshold to cover {num_neighborhoods_to_cover} neighborhoods is: {max_threshold}\")\n",
     "\n",
     "    # get a new copy of the original dataframe\n",
     "    ntas_serviceability = dfs_nta_serviceability[vehicle_type].copy()\n",
     "    # set the serviceability based on the last valid threshold (actual + 1)\n",
-    "    ntas_serviceability = set_serviceability(serviceability_threshold + 1, ntas_serviceability).copy()\n",
-    "\n",
+    "    ntas_serviceability = set_serviceability(max_threshold, ntas_serviceability).copy()\n",
     "    # store the serviceability table\n",
-    "    dfs_nta_serviceability[vehicle_type] = ntas_serviceability\n",
-    "    # store the serviceability distance\n",
-    "    serviceability_distances[vehicle_type] = serviceability_threshold + 1\n",
-    "    # print the serviceability distance\n",
-    "    print(vehicle_type + \": \" + str(serviceability_threshold + 1))\n",
-    "    "
+    "    dfs_nta_serviceability[vehicle_type] = ntas_serviceability\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
