--- a/neighborhoods_serviceability_v3.ipynb
+++ b/neighborhoods_serviceability_v3.ipynb
@@ -133,11 +133,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The maximum threshold to cover 1 neighborhoods is: 753.19\n",
-      "The maximum threshold to cover 1 neighborhoods is: 753.19\n",
-      "The maximum threshold to cover 39 neighborhoods is: 2601.46\n",
-      "The maximum threshold to cover 24 neighborhoods is: 2336.86\n",
-      "The maximum threshold to cover 195 neighborhoods is: 4537.84\n"
+      "The maximum threshold to cover 2 neighborhoods is: 800.24\n",
+      "The maximum threshold to cover 2 neighborhoods is: 800.24\n",
+      "The maximum threshold to cover 40 neighborhoods is: 2675.74\n",
+      "The maximum threshold to cover 25 neighborhoods is: 2339.26\n",
+      "The maximum threshold to cover 196 neighborhoods is: 4537.84\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
     "    \n",
     "    n_nta = len(df_distance_stations_ntas)\n",
     "    # Set the number of neighborhoods you want to cover\n",
-    "    num_neighborhoods_to_cover = 1 if vehicle_quantity > n_nta else (n_nta // vehicle_quantity)\n",
+    "    num_neighborhoods_to_cover = 2 if vehicle_quantity > n_nta else round((n_nta / vehicle_quantity) + 1)\n",
     "\n",
     "    # Initialize an empty dictionary to store minimum thresholds for each station\n",
     "    min_thresholds = {}\n",
